[package]
name = "rocket-governor"
version = "0.2.0-rc.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation of Governor rate limiter for Rocket"
documentation = "https://docs.rs/rocket-governor"
homepage = "https://github.com/kolbma/rocket-governor"
repository = "https://github.com/kolbma/rocket-governor"
keywords = ["rocket", "governor", "rate-limit", "rate-limiting", "ratelimit"]
categories = ["web-programming"]
rust-version = "1.69.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# minimum supported rust version 1.67.0 because of 3rd level dependency crate rocket->time
# minimum supported rust version 1.69.0 because of incompatibility in macro expansion
msrv = "1.69.0"

[package.metadata.docs.rs]
all-features = true # get api doc for all features on https://docs.rs

[dependencies]
governor = { version = "0.6", default-features = false, features = ["std"] }
lazy_static = "1.4"
# rocket = { path = "../rocket/core/lib" }
# rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "v0.5" }
rocket = { version = "0.5", default-features = false }

[features]
limit_info = []
logger = []
